--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.5",
+    "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
+    "mongoose": "^7.4.0",
+    "mongoose-unique-validator": "^4.0.0",
     "nodemon": "^2.0.22"
   }
 }
